--- a/explorePrototype/css/tool.css
+++ b/explorePrototype/css/tool.css
@@ -468,11 +468,6 @@ p.dek {
         width: 90%;
       }
 
-      /* #searchInput > img {
-        position: absolute;
-        right: 11px;
-      } */
-
       #exploreList {
         display: flex;
         flex-wrap: nowrap;
@@ -489,6 +484,10 @@ p.dek {
         margin-right: 20px;
         flex-grow: 1;
         margin-bottom: 15px;
+      }
+      
+      .schoolContainer:last-of-type {
+        border-bottom: 1px #D2D2D2 solid;
       }
 
       .schoolA > p {
